--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -2002,6 +2002,9 @@
     <ClCompile Include="..\..\xbmc\filesystem\DllLibCurl.cpp">
       <Filter>filesystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\EFileFile.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\xbmc\filesystem\File.cpp">
       <Filter>filesystem</Filter>
     </ClCompile>
@@ -5028,6 +5031,12 @@
     <ClInclude Include="..\..\xbmc\filesystem\DllLibNfs.h">
       <Filter>filesystem</Filter>
     </ClInclude>
+    <ClCompile Include="..\..\xbmc\filesystem\EFileDirectory.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\EFileFile.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
     <ClInclude Include="..\..\xbmc\filesystem\File.h">
       <Filter>filesystem</Filter>
     </ClInclude>
@@ -6176,6 +6185,9 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\input\KeyboardLayoutManager.h">
       <Filter>input</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\filesystem\EFileFile.h">
+      <Filter>filesystem</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
