--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -1942,6 +1942,9 @@
     <ClCompile Include="..\..\xbmc\filesystem\DllLibCurl.cpp">
       <Filter>filesystem</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\xbmc\filesystem\EFileFile.cpp">
+      <Filter>filesystem</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\xbmc\filesystem\File.cpp">
       <Filter>filesystem</Filter>
     </ClCompile>
@@ -4852,6 +4855,9 @@
     <ClInclude Include="..\..\xbmc\filesystem\DllLibNfs.h">
       <Filter>filesystem</Filter>
     </ClInclude>
+    <ClCompile Include="..\..\xbmc\filesystem\EFileFile.h">
+      <Filter>filesystem</Filter>
+    </ClCompile>
     <ClInclude Include="..\..\xbmc\filesystem\File.h">
       <Filter>filesystem</Filter>
     </ClInclude>
